crates/cyrs-sema/src/snapshots/cyrs_sema__kinds__tests__kinds_rel_in_arithmetic_mismatch.snap
---
source: crates/cyrs-sema/src/kinds.rs
expression: run(&stmt)
---
diagnostics: 1
  E2007: variable `r` has kind `Relationship` but is used in an arithmetic expression; only `Value` variables are valid here
